# school-comms-aggregator

./: .gitignore  create_shortcut.ps1  launch.vbs  launcher.py  probe_bw.py  probe_bw2.py  probe_bw3.py  pyproject.toml  requirements.txt
src/: main.py
src/config/: gmail_query.py  settings.py
src/models/: base.py  communication.py
src/services/: brightwheel_auth.py  brightwheel_service.py  checklist_service.py  credential_manager.py  date_extractor.py  gmail_service.py  summary_service.py  sync_service.py  whatsapp_service.py
src/ui/: archive_view.py  brightwheel_auth_dialog.py  calendar_view.py  communications_view.py  dashboard_view.py  detail_panel.py  filter_toolbar.py  gmail_auth_dialog.py  landing_page.py  main_window.py  settings_dialog.py  theme.py  whatsapp_setup_dialog.py
src/ui/widgets/: checklist_card.py  communication_card.py  day_section.py  find_bar.py  photo_gallery.py  status_bar.py  summary_card.py
src/utils/: date_parser.py  date_utils.py  html_utils.py
src/workers/: summary_worker.py  sync_worker.py
